--- a/web/views/groups/emp_group.html
+++ b/web/views/groups/emp_group.html
@@ -187,19 +187,7 @@
         <!-- Right Section -->
         <div class="right-section">
             <div class="nav">
-                <button id="menu-btn">
-                    <span class="material-icons-sharp">
-                        menu
-                    </span>
-                </button>
-                <div class="dark-mode">
-                    <span class="material-icons-sharp active">
-                        light_mode
-                    </span>
-                    <span class="material-icons-sharp">
-                        dark_mode
-                    </span>
-                </div>
+                
 
                 <div class="profile">
                     <div class="info">
@@ -207,10 +195,19 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="../../images/profile-1.jpg" alt="Admin profile picture">
+                        <img src="../../images/administrateur.png" alt="Admin profile picture">
                     </div>
                 </div>
 
+            </div>
+            <!-- End of Nav -->
+
+            <div class="user-profile">
+                <div class="logo">
+                    <img src="../../images/-1cbf38203acc415288c07dd08199e82e-1@2x.png" alt="Company logo">
+                    <h2>Ease Dine</h2>
+                    <p>The Best for The Best</p>
+                </div>
             </div>
             <!-- End of Nav -->
 
