--- a/web/views/Users/adduser.html
+++ b/web/views/Users/adduser.html
@@ -144,10 +144,7 @@
         <main>
             <div class="form-container">
                 <div class="form-left">
-                    <div class="form-group">
-                        <label for="user-image">Product Image</label>
-                        <input type="file" id="user-image" name="product-image" accept="image/*">
-                    </div>
+                    
                     <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" id="username" name="username" placeholder="Username">
@@ -214,19 +211,7 @@
         <!-- Right Section -->
         <div class="right-section">
             <div class="nav">
-                <button id="menu-btn">
-                    <span class="material-icons-sharp">
-                        menu
-                    </span>
-                </button>
-                <div class="dark-mode">
-                    <span class="material-icons-sharp active">
-                        light_mode
-                    </span>
-                    <span class="material-icons-sharp">
-                        dark_mode
-                    </span>
-                </div>
+                
 
                 <div class="profile">
                     <div class="info">
@@ -234,16 +219,17 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="../../images/profile-1.jpg" alt="Admin profile picture">
+                        <img src="../../images/administrateur.png" alt="Admin profile picture">
                     </div>
                 </div>
+
             </div>
             <!-- End of Nav -->
 
             <div class="user-profile">
                 <div class="logo">
-                    <img src="../../images/logo.png" alt="Company logo">
-                    <h2>Favor Haven</h2>
+                    <img src="../../images/-1cbf38203acc415288c07dd08199e82e-1@2x.png" alt="Company logo">
+                    <h2>Ease Dine</h2>
                     <p>The Best for The Best</p>
                 </div>
             </div>
